# IRate

./: README.md
Irate/: frontend.py  hello.ll  hello_opt.ll  temp_test.ll
Irate/IRate/: CMakeLists.txt  hello.c  hello.ll  test.c  test.ll
Irate/IRate/include/: Utils.h
Irate/IRate/src/: PassRunner.cpp  PassRunner.h  Utils.cpp  main.cpp
Irate/compiler/: pyvenv.cfg
Irate/irate_output/: ledger.json  ledger_table.txt
ledger/src/: PassRunner.cpp  Utils.cpp  main.cpp
